argo/downloads/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: downloads
spec:
  ports:
  - name: sonarr
    port: 8989
    protocol: TCP
  selector:
    app: sonarr
  type: ClusterIP
